@@ -5,8 +5,8 @@ lib_LTLIBRARIES = libglobus_gsi_proxy_core.la
 
 libglobus_gsi_proxy_core_la_CPPFLAGS = \
 	-I$(top_builddir) -I$(top_srcdir)/library \
-	$(PACKAGE_DEP_CFLAGS)
-libglobus_gsi_proxy_core_la_LIBADD = $(PACKAGE_DEP_LIBS)
+	$(PACKAGE_DEP_CFLAGS) $(OPENSSL_CFLAGS)
+libglobus_gsi_proxy_core_la_LIBADD = $(PACKAGE_DEP_LIBS) $(OPENSSL_LIBS)
 libglobus_gsi_proxy_core_la_LDFLAGS = \
 	-version-info $(MAJOR_VERSION):$(MINOR_VERSION):$(AGE_VERSION) \
         -no-undefined
