@@ -4,8 +4,8 @@ check_PROGRAMS = \
 		proxy-handle-compat-test \
 		proxy-handle-test
 
-AM_CPPFLAGS = $(PACKAGE_DEP_CFLAGS) -I$(top_srcdir)/library -I..
-LDADD = ../library/libglobus_gsi_proxy_core.la $(PACKAGE_DEP_LIBS) 
+AM_CPPFLAGS = -I$(top_srcdir)/library -I.. $(PACKAGE_DEP_CFLAGS) $(OPENSSL_CFLAGS)
+LDADD = ../library/libglobus_gsi_proxy_core.la $(PACKAGE_DEP_LIBS) $(OPENSSL_LIBS)
 AM_LDFLAGS = $(GPT_LDFLAGS)
 
 TESTS = \
