@@ -11,7 +11,7 @@ endif
 
 name = globus-gsi-proxy-core
 _name = globus_gsi_proxy_core
-version = 8.5
+version = 8.6
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
