@@ -1,3 +1,9 @@
+globus-gsi-proxy-core (8.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix missing openssl compile/link flags
+
+ -- Globus Toolkit <support@globus.org>  Fri, 09 Sep 2016 09:28:07 -0400
+
 globus-gsi-proxy-core (8.5-1+gt6.@distro@) @distro@; urgency=low
 
   * Update for el.5 openssl101e
